--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Deploy
         run: |
